# 17025

./: .dockerignore  .env.example  .env.portless  .gitattributes  .gitignore  .prettierignore  LICENSE  MIGRATION_AUDIT.md  Makefile  README.md  README_APP.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/api/: .env.example  Cargo.toml
src/api/migrations/: 20240101000000_initial_schema.sql  20240102000000_fix_perforaciones_sensores.sql  20240103000000_add_pdf_fields_to_ensayos.sql  20240125000000_add_muestras_table.sql  20240126000000_add_equipo_id_to_sensores.sql  20240127000000_add_personal_interno_table.sql  20240128000000_add_comprobaciones_calibraciones_tables.sql  20240300000000_add_table_ensayos.sql  20240301000000_add_unique_nombre_tipos_ensayo.sql  20260309000000_add_usuarios_table.sql  20260309001000_add_scheduler_tables.sql  20260310000000_add_duracion_estimada_to_ensayos.sql  20260413000000_add_url_sheets_ensayos.sql  20260415000000_add_prices_table.sql  20260417000000_add_drive_folder_id_to_muestras.sql  20260417010000_seed_tipos_ensayo_sheets.sql  20260420143500_update_tipos_ensayo_sheets_drive_ids.sql  20260420205700_calibration_sensor.sql  20260421000000_comprobacion_sensor.sql  20260428000000_seed_equipos_demo_data.sql  20260428000100_add_incertidumbre_calibracion.sql  20260428000200_redistribute_comprobaciones_demo.sql  20260429000000_comprobacion_derivados.sql  20260429000100_seed_comprobaciones_v2.sql
src/api/src/: config.rs  errors.rs  main.rs
src/api/src/db/: connection.rs
src/api/src/models/: calibracion.rs  cliente.rs  comprobacion.rs  ensayo.rs  equipos.rs  equipos_dtosensor.rs  mod.rs  muestra.rs  perforacion.rs  personal_interno.rs  proyecto.rs  sensores.rs  tipo_ensayo_sheet.rs  (+2 more)
(+496 files in other folders)
